<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="12dp"
    android:background="@drawable/background"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corners"
        android:textSize="55sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="200dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_name"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/name_order_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"

            android:text="@string/headline"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/date_order_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_month_year"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/hour_order_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult_tickets_amount"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/adult_order_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/children_tickets_amount"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/child_order_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:text="@string/theater"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/theater_order_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:text="@string/theater"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:background="@drawable/rounded_corners"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/TotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zerodollar"
            android:layout_marginStart="20dp"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="38sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:layout_weight="1"
            android:id="@+id/accept"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:id="@+id/cancel"
            />

    </LinearLayout>



</LinearLayout>