<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="15dp"
    android:background="@drawable/background">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:id="@+id/headline_btn"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/trans1"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:src="@drawable/trans_ryan" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <ImageView
            android:id="@+id/trans2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1.5"
            android:src="@drawable/trans_ryan2" />
    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textColor="#2196F3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_chat_24"
        app:iconTint="#2196F3"
        app:iconSize="30dp"
        style = "@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_gravity="center"
        android:id="@+id/summary_btn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="1"
            android:id="@+id/date_dialog_button"
        />
        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/day_month_year"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/rounded_corners"/>

        <Spinner
            android:id="@+id/hour_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/time_options"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:textColor="#000000"
            android:spinnerMode="dropdown" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult_ticket"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="20sp"
            android:layout_marginStart="4dp" />
        <Button
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="20sp"
            android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/ticketCountTextView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_ticket"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/plusButtonChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="20sp"
            android:layout_marginStart="4dp" />
        <Button
            android:id="@+id/minusButtonChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="20sp"
            android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/ticketCountTextViewChild"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
    <CheckBox
        android:id="@+id/Rishon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="14sp"
        android:text="@string/rishon_le_zion"
        android:textColor="@color/white"
        />
        <CheckBox
            android:id="@+id/Glilot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/glilot"
            android:textColor="@color/white"
            />
        <CheckBox
            android:id="@+id/BeerSheva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/beer_sheva"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zerodollar"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order"
            android:text="@string/place_an_order"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_margin="10dp"
        android:id="@+id/my_image"
        android:layout_gravity="center"
        android:src="@drawable/gif_animation"
        android:scaleType="fitXY"/>



</LinearLayout>